@@ -1,3 +1,9 @@
+2008-05-24  Torsten Rahn  <rahn@kde.org> 
+
+    * src/lib/EquirectScanlineTextureMapper.cpp:
+
+    - Add bilinear filtering here as well as pointed out by jm
+
 2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * src/lib/ViewParams.h:
